# rust-ray-tracer

./: .gitignore  Cargo.toml  README.md
nurbs/: Cargo.toml
nurbs/src/: b_spline_curve.rs  bezier_curve.rs  bezier_surface.rs  curve.rs  interval.rs  knot_utility_functions.rs  lib.rs  parametric_curve.rs  parametric_surface.rs  point_types.rs  power_basis_curve.rs  surface.rs  utility.rs  vector_3.rs
nurbs/src/point_types/: point.rs  point_2d.rs  point_3d.rs  point_4d.rs
ray_tracing/: Cargo.toml
ray_tracing/src/: aabb.rs  affine_transforms.rs  bvh_node.rs  camera.rs  checker_texture.rs  color.rs  constant_medium.rs  cosine_pdf.rs  demo_render.rs  dielectric.rs  diffuse_light.rs  hittable.rs  hittable_list.rs  hittable_pdf.rs  image_texture.rs  isotropic.rs  lambertian.rs  lib.rs  main.rs  material.rs  metal.rs  mixture_pdf.rs  noise_texture.rs  orthonormal_basis.rs  pdf.rs  perlin.rs  quad.rs  ray.rs  solid_texture.rs  sphere.rs  sphere_pdf.rs  texture.rs
src/: aabb.rs  affine_transforms.rs  bvh_node.rs  camera.rs  checker_texture.rs  color.rs  constant_medium.rs  cosine_pdf.rs  demo_render.rs  dielectric.rs  diffuse_light.rs  hittable.rs  hittable_list.rs  hittable_pdf.rs  image_texture.rs  interval.rs  isotropic.rs  lambertian.rs  lib.rs  main.rs  material.rs  metal.rs  mixture_pdf.rs  noise_texture.rs  orthonormal_basis.rs  pdf.rs  perlin.rs  quad.rs  ray.rs  save_show.rs  solid_texture.rs  sphere.rs  sphere_pdf.rs  texture.rs  vector_3.rs
